[gd_scene load_steps=5 format=3 uid="uid://bq5fapyfw3qqo"]

[ext_resource type="Theme" uid="uid://bc2o2wqjkqbbe" path="res://assets/Themes/Default-UI.tres" id="1_2tqnl"]
[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="2_3b6e7"]
[ext_resource type="Texture2D" uid="uid://lfd7f65wc5wk" path="res://assets/V2PlacehoderGraphics/ButtonBoarders.png" id="2_14sdm"]
[ext_resource type="Texture2D" uid="uid://ct4ih24uetd5l" path="res://assets/V2PlacehoderGraphics/Logo.png" id="3_eur2l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 422.0
offset_top = 304.0
offset_right = 462.0
offset_bottom = 344.0
theme = ExtResource("1_2tqnl")
script = ExtResource("2_3b6e7")

[node name="ButtonBoarders" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.85
anchor_top = 0.5
anchor_right = 3.85
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 3264.0
offset_bottom = 1836.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_14sdm")

[node name="Logo" type="TextureRect" parent="ButtonBoarders"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.0
offset_top = -813.333
offset_right = 265.0
offset_bottom = -326.333
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3596, 1.04381)
texture = ExtResource("3_eur2l")

[node name="Profile-Button" type="Button" parent="ButtonBoarders"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1680.0
offset_top = -40.0
offset_right = -720.0
offset_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 170
text = "You"

[node name="Panel" type="Panel" parent="ButtonBoarders"]
layout_mode = 0
offset_left = 2640.0
offset_top = 1040.0
offset_right = 3600.0
offset_bottom = 1760.0

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonBoarders"]
layout_mode = 0
offset_left = 1360.0
offset_top = 1040.0
offset_right = 2480.0
offset_bottom = 1760.0

[node name="Play-Button" type="Button" parent="ButtonBoarders/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 170
text = "Play"

[node name="Settings-Button" type="Button" parent="ButtonBoarders/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 170
text = "Settings
"

[node name="Quit-Button" type="Button" parent="ButtonBoarders/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 170
text = "Quit"

[connection signal="pressed" from="ButtonBoarders/Profile-Button" to="." method="_on_profile_button_pressed"]
[connection signal="pressed" from="ButtonBoarders/VBoxContainer/Play-Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonBoarders/VBoxContainer/Settings-Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonBoarders/VBoxContainer/Quit-Button" to="." method="_on_quit_button_pressed"]
